--- a/03-CSS-Fundamentals/index.html
+++ b/03-CSS-Fundamentals/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css " />
+
     <title>The Basic Language of the Web: HTML</title>
   </head>
 
