--- a/04-CSS-Layouts/flexbox.html
+++ b/04-CSS-Layouts/flexbox.html
@@ -40,6 +40,41 @@
         margin: 40px;
 
         /* FLEXBOX */
+        display: flex;
+        justify-content: flex-start; /* align items on main axis (horizontal axis, by default) */
+        align-items: center; /* align items on cross axis (vertical axis, by default) */
+        /* gap: 35px; */
+      }
+
+      .el {
+        /*         
+        DEFAULTS:
+        flex-grow: 0;
+        flex-shrink: 1;
+        flex-basis: auto; 
+        */
+
+        /* flex-basis: 200px; */
+        /* flex-shrink: 0; */
+        /* flex-grow: 1; */
+        /* flex: 0 0 200px; */
+
+        flex: 1;
+      }
+
+      .el--1 {
+        align-self: flex-start;
+        /* order: 2; */
+        /* flex-grow: 3; */
+      }
+
+      .el--5 {
+        align-self: stretch;
+        order: 1;
+      }
+
+      .el--6 {
+        order: -1;
       }
     </style>
   </head>
