--- a/01-Test/index.html
+++ b/01-Test/index.html
@@ -4,10 +4,53 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My first webpage</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Challenges</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <p>My name is Rutvik, and this is my very first webpage :D</p>
+    <article>
+      <h2>Converse Chuck Taylor All Star Low Top</h2>
+
+      <div class="product-panel">
+        <img
+          src="https://i.ibb.co/Jr7Wh1d/challenges.jpg"
+          alt="Chuck Taylor All Star Shoes"
+          width="250"
+          height="250"
+          class="shoes-img"
+        />
+        <div class="info">
+          <div class="price-shipping">
+            <p class="price"><strong>$65.00</strong></p>
+            <p class="shipping">Free shipping</p>
+          </div>
+
+          <div class="link-colors">
+            <p>
+              Ready to dress up or down, these classic canvas Chuck are an
+              everyday wardrobe staple.
+            </p>
+            <a href="#" class="info-link">More information &rarr; </a>
+            <div class="colors">
+              <div class="black"></div>
+              <div class="blue"></div>
+              <div class="red"></div>
+              <div class="yellow"></div>
+              <div class="green"></div>
+              <div class="maroon"></div>
+            </div>
+          </div>
+        </div>
+        <div class="product-details">
+          <h3>Product details</h3>
+          <ul>
+            <li>Lightweight, durable canvas sneakers</li>
+            <li>Lightly padded footbed for added comfort</li>
+            <li>Iconic Chuck Taylor ankle patch</li>
+          </ul>
+        </div>
+      </div>
+      <button>Add to cart</button>
+    </article>
   </body>
 </html>
