--- a/04-CSS-Layouts/css-grid.html
+++ b/04-CSS-Layouts/css-grid.html
@@ -14,7 +14,7 @@
       }
       .el--3 {
         background-color: green;
-        /* height: 150px; */
+        height: 150px;
       }
       .el--4 {
         background-color: goldenrod;
@@ -47,26 +47,52 @@
 
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr 1fr;
-        height: 500px;
+        /* height: 500px; */
 
         /* gap: 30px; */
         column-gap: 30px;
         row-gap: 60px;
+
+        /* Temp */
+        display: none;
+      }
+
+      .el--8 {
+        grid-column: 2 / 3;
+        grid-row: 1/2;
+      }
+
+      .el--2 {
+        /* grid-column: 1/3; */
+        /* grid-column: 1 / span 2; */
+        grid-column: 1 / -1;
+        grid-row: 2;
       }
 
       .container--2 {
-        display: none;
-
         /* STARTER */
         font-family: sans-serif;
         background-color: black;
         font-size: 40px;
-        margin: 100px;
+        margin: 40px;
 
-        width: 1000px;
+        width: 700px;
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
+        gap: 60px;
+
+        /* Aligning track inside the container: distribute empty space */
+        justify-content: center;
+        /* justify-content: space-between; */
+        align-content: center;
+
+        /* Aligning items INSIDE cells: moving items inside the cells */
+        align-items: center;
+        justify-items: center;
       }
     </style>
   </head>
@@ -78,7 +104,7 @@
       <div class="el el--4">(4) are</div>
       <div class="el el--5">(5) amazing</div>
       <div class="el el--6">(6) languages</div>
-      <div class="el el--7">(7) to</div>
+      <!-- <div class="el el--7">(7) to</div> -->
       <div class="el el--8">(8) learn</div>
     </div>
 
