--- a/06-Components/04-pagination.html
+++ b/06-Components/04-pagination.html
@@ -32,23 +32,21 @@
         font-family: "Inter", sans-serif;
         color: #343a40;
         line-height: 1;
-      }
-
-      .pagination {
-        width: 800px;
-        margin: 200px auto;
-
         display: flex;
-
-        gap: 16px;
-        align-items: center;
         justify-content: center;
       }
 
+      .pagination {
+        display: flex;
+        gap: 16px;
+        align-items: center;
+        justify-content: center;
+        margin-top: 200px;
+      }
+
       .btn {
-        height: 32px;
-        width: 32px;
-        padding: 4px;
+        height: 48px;
+        width: 48px;
         border: none;
         background-color: #fff;
         border-radius: 50%;
@@ -57,13 +55,14 @@
 
         display: flex;
         align-items: center;
+        justify-content: center;
       }
 
       .btn:hover {
         background-color: #087f5b;
       }
 
-      .btn-icon:hover {
+      .btn:hover .btn-icon {
         stroke: #fff;
       }
 
@@ -77,12 +76,14 @@
       a:visited {
         width: 32px;
         height: 32px;
-        padding: 8px;
         color: #343a40;
         text-decoration: none;
         border-radius: 50%;
-        font-size: 16px;
-        text-align: center;
+        font-size: 18px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
 
       a:hover,
