--- a/09-Omnifood-Optimizations/index.html
+++ b/09-Omnifood-Optimizations/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Omnifood is an AI-powered food
+    subscription that will make you eat healthy again, 365 days per year. It's tailored to your personal tastes and nutritional needs"
+    />
 
     <!-- Always include this line of code!!! -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="icon" href="img/favicon64.png" />
+    <link rel="apple-touch-icon" href="img/favicon-apple.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap"
@@ -32,7 +40,7 @@
     ></script>
     <script defer src="js/script.js"></script>
 
-    <title>Omnifood</title>
+    <title>Omnifood &mdash; Never cook again!</title>
   </head>
   <body>
     <header class="header">
