--- a/09-Omnifood-Optimizations/index.html
+++ b/09-Omnifood-Optimizations/index.html
@@ -592,11 +592,12 @@
                 first meal is on us!
               </p>
 
-              <form class="cta-form" action="#">
+              <form class="cta-form" name="sing-up" netlify>
                 <div>
                   <label for="full-name">Full Name</label>
                   <input
                     id="full-name"
+                    name="full-name"
                     type="text"
                     placeholder="John Smith"
                     required
@@ -607,6 +608,7 @@
                   <label for="email">Email address</label>
                   <input
                     id="email"
+                    name="email"
                     type="email"
                     placeholder="me@example.com"
                     required
@@ -615,7 +617,7 @@
 
                 <div>
                   <label for="select-where">Where did you hear from us?</label>
-                  <select id="select-where" required>
+                  <select id="select-where" name="select-where" required>
                     <option value="">Please choose one option:</option>
                     <option value="friends">Friends and family</option>
                     <option value="youtube">YouTube video</option>
